--- a/language-kspcfg/package.json
+++ b/language-kspcfg/package.json
@@ -2,7 +2,7 @@
   "name": "language-kspcfg",
   "main": "./lib/language-kspcfg",
   "version": "0.0.0",
-  "description": "A short description of your package",
+  "description": "Configuration for Kerbal Space Program.",
   "keywords": [
   ],
   "activationCommands": {
